--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
   <body>
 
 <!-- navigation section -->
+<div class="container">
 
-    <nav class="container">
+    <nav>
+
       <img src="./resources/images/logo-white.png" alt="Company logo">
       <span class="company-name">Tortoiseshell Optics</span>
 
-        <span class="menu">Services</span>
-        <span class="menu">Products</span>
-        <span class="menu">Contact</span>
+        <span class="nav">Services</span>
+        <span class="nav">Products</span>
+        <span class="nav">Contact</span>
+        <span class="mobile-menu">Menu</span>
 
     </nav>
-
+</div>
 
 <!-- banner image section -->
 
@@ -67,23 +70,64 @@
 
 <!-- information section -->
 
-<div class="container">
+<div class="info-container">
 
-  <div class="info-container">
-
-    <div class="info-block">
+    <div class="info-block-1">
       <span>PHILOSOPHY</span>
-      <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
     </div>
 
-    <div class="info-block">
-      <span id="info-block">APPOINTMENTS</span>
-      <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+    <div class="info-block-2">
+      <span>APPOINTMENTS</span>
     </div>
 
+</div>
+
+<div class="info-container">
+
+  <div class="info-text-1">
+    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+  </div>
+
+  <div class="info-text-2">
+    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
   </div>
 
 </div>
+
+<!-- mobile only section -->
+
+<div class="mobile-info-container">
+
+  <div class="info-block-1">
+    <span>PHILOSOPHY</span>
+  </div>
+
+  <div class="info-text-1">
+    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+  </div>
+
+  <div class="info-block-2">
+    <span>APPOINTMENTS</span>
+  </div>
+
+  <div class="info-text-2">
+    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+  </div>
+
+</div>
+
+
+
+<!-- footer -->
+
+<footer>
+<div class="container">
+  <img src="./resources/images/logo-black.png" alt="Company logo">
+  <span>Copyright Tortoiseshell Optics</span>
+</div>
+
+
+</footer>
 
 
   </body>
